# nbg-python-sdk

./: .gitignore  .readthedocs.yml  LICENSE  Pipfile  Procfile.dev  README.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml  test.yml
docs/source/: account_information.rst  auth.rst  base.rst  conf.py  guides.rst  index.rst  installation.rst
docs/source/user/: account_information.rst
nbg/: account_information.py  base.py  base_test.py  decorators.py  exceptions.py  resources.py  resources_test.py
nbg/auth/: consent.py  consent_test.py  exceptions.py  oauth.py  oauth_test.py  signature.py  signature_test.py
nbg/auth/certs/: nbg-qseal-production.cer  nbg-qseal-sandbox.cer
nbg/base/: auth.py  auth_test.py  client.py  decorators.py  decorators_test.py  environment.py  environment_test.py  exceptions.py  resources.py  sandbox.py  sandbox_test.py  utils.py  utils_test.py
