[tool.poetry]
name = "nbg"
version = "0.6.0"
description = "Official Python SDK for NBG APIs"
authors = ["Paris Kasidiaris <paris@sourcelair.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22.0"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.3.4"
mypy = "^0.761"
sphinx = "^3.0.0"
watchdog = "^0.10.2"
pyyaml = "^5.3.1"
argh = "^0.26.2"
livereload = "^2.6.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
